# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "malta-db"
version = "0.1.0"
authors = ["Mahad Kalam <mahadkalam1234@gmail.com>"]
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
color-eyre = "0.6.3"
once_cell = "1.19.0"
thiserror = "1.0.32"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
